High-Availability-Kubernetes-Lab-01/achtix-homelab/k8s/gatewayAPI.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shop-gateway
  annotations:
    networking.istio.io/service-type: LoadBalancer
    networking.istio.io/deployment-replicas: "1"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: istio 
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: shop-demo-tls # cert-manager จะเอาใบรับรองมาใส่ในชื่อนี้ให้เอง
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shop-route
spec:
  parentRefs:
  - name: shop-gateway
  hostnames:
  - "shop-demo.achtix.com"
  - "shop.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-external
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  parentRefs:
  - name: shop-gateway
    namespace: default # ตรวจสอบชื่อและ namespace ของ Gateway ให้ตรงกัน
  hostnames:
  - "longhorn.achtix.com"
  rules:
  - backendRefs:
    - name: longhorn-frontend
      port: 80
