High-Availability-Kubernetes-Lab-01/achtix-homelab/k8s/longhorn.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  parentRefs:
  - name: shop-gateway
    namespace: default
  hostnames:
  - "longhorn.achtix.com"
  rules:
  - backendRefs:
    - name: longhorn-frontend
      port: 80
